test/syc/good/lor.c
/*
 * Logical OR
 */

int a, b;

int lor(void)
{
	return (int)(a || b);
}
